# med-core

./: .gitignore  .project  Cargo.toml  Dockerfile  Dockerfile.pytest  app.py  app_procedure.sql  auth.py  config.json  db.py  db_schema_new.sql  docker-compose.yml  dummy_data.sql  dump-medcore_db-202410312252.sql  dump-medcore_db-202411012045.sql  dump-medcore_db-202411182257.sql  error_messages.py  errors.py  helper_functions.py  logging_config.py  medcore-db.session.sql  medcore.sql  models.py  nginx-stacy-entrypoint.sh  nginx-stacy.Dockerfile  nginx.conf  rate_limit.py  red.sql  requirements.txt  schema.sql  users_api.py  working_query.sql
.sqlx/: query-a819c43e1c54f709f0a0c878cc3fd82283ecb5ced5ebf1c894511b998e98117d.json  query-ededf7bc788d5e9417d903a438c7f4a8e02d0c3f177d7d5bc13679186ccb7385.json
migrations/versions/: 2dc22a50c144_db_creation.py  3ae47c8761ac_fixed_healthcare.py  edc1d1cb1bf5_added_roles.py
routers/: anamnesis.py  appointments.py  clinics.py  patients.py  professionals.py  schedules.py  users.py  users_api.py
src/: db.rs  errors.rs  handlers.rs  main.rs  routes.rs
src/auth/: handlers.rs  jwt.rs  mod.rs  password.rs  queries.rs
static/: about.html  clinics.html  contact.html  dashboard.html  frontdesk.html  home.html  index.css  index.html  login.css  login.html  patient-edit.html  patients.html  register.html  styles.css
templates/: about.html  base.html  contact.html  dashboard.html  index.html  login.html  patient_management.html  register.html  schedule.html
tests/: auth_test.py  medical_records_test.py  test_auth.py
(+28 files in other folders)
